<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  android:orientation="vertical">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:id="@+id/ll1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView
        android:id="@+id/tvSampling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patch_info_sampling"/>
      <TextView
        android:id="@+id/tvLeanOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patch_info_leadOn"/>
      <TextView
        android:id="@+id/tvSampleFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patch_info_sampleFrequency"/>
      <TextView
        android:id="@+id/tvBaseLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patch_info_baselinealgoopen"/>
      <TextView
        android:id="@+id/tvRTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patch_info_rtsdataopen"/>
      <TextView
          android:id="@+id/tvMode"
          android:visibility="gone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/patch_info_mode"/>
      <TextView
          android:id="@+id/tvFlashSave"
          android:visibility="gone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/patch_info_flash_save"/>
    </LinearLayout>

    <LinearLayout
      android:id="@+id/ll2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:orientation="vertical">
      <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_status"/>
      <TextView
        android:id="@+id/tvLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_level"/>
      <TextView
        android:id="@+id/tvCanOta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_can_ota"/>
      <TextView
        android:id="@+id/tvCanSampling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_can_sampling"/>
      <TextView
        android:id="@+id/tvCanBleTransmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_can_ble_transmission"/>
      <TextView
        android:id="@+id/tvRawVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_raw_voltage"/>
      <TextView
        android:id="@+id/tvVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_voltage"/>
      <TextView
        android:id="@+id/tvPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_info_percent"/>
      <TextView
          android:id="@+id/tvTemperature"
          android:visibility="gone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/battery_info_temperature"/>
    </LinearLayout>
  </LinearLayout>
  <Button
    android:id="@+id/btOk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/ok"/>
</LinearLayout>