<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:checkableBehavior="single">
    <item
      android:id="@+id/nav_scanning"
      android:icon="@drawable/ic_baseline_bluetooth_searching_24px"
      android:title="@string/main_menu_scaning"/>
  </group>

  <item android:title="@string/main_menu_title">
    <menu>
      <item
        android:id="@+id/nav_connected_device"
        android:icon="@drawable/ic_baseline_bluetooth_connected_24px"
        android:title="@string/main_menu_connected"/>
      <item
        android:id="@+id/nav_check"
        android:icon="@drawable/ic_baseline_build_24px"
        android:title="@string/main_menu_check"/>
    </menu>
  </item>
</menu>
