<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <TextView
      android:id="@+id/tvPatchMac"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/tv_patch_mac"/>

    <TextView
      android:id="@+id/tvPatchSN"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/tv_patch_sn"/>

    <TextView
      android:id="@+id/tvPatchFWVersion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/tv_patch_firmware_version"/>

    <TextView
      android:id="@+id/tvPatchHWVersion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/tv_patch_hardware_version"/>

    <TextView
      android:id="@+id/tvChargeFWVersion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/tv_charge_firmware_version"/>

    <TextView
      android:id="@+id/tvChargeHWVersion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="2dp"
      android:text="@string/tv_charge_hardware_version"/>

    <Button
      android:id="@+id/btnDisconnect"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:background="@color/colorAccent"
      android:text="@string/disconnect"
      android:textColor="@color/white"/>

  </LinearLayout>
</ScrollView>