<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin">
      <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:orientation="horizontal">

          <Button
            android:id="@+id/btnGraphics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/graphics"/>
          <Button
            android:id="@+id/btnDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/str_detail"/>
          <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
          android:id="@+id/rlSampling"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp">
          <Button
            android:id="@+id/btnStartSampling"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_start_sampling"/>
          <Button
            android:id="@+id/btnShutDown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_shut_down"/>
          <Button
            android:id="@+id/btnStopSampling"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_stop_sampling"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/rlSelfTest"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:orientation="horizontal">
          <Button
            android:id="@+id/btnSetPatchClock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_not_selftest"/>
          <Button
            android:id="@+id/btnSelfTest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_selftest"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/rlFlash"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp">
          <Button
            android:id="@+id/btnQueryFlash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_query_flash"/>
          <Button
            android:id="@+id/btnUploadFlash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_upload_flash"/>
          <Button
            android:id="@+id/btnCancelUpload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_cancel_flash"/>
          <Button
            android:id="@+id/btnEraseFlash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_erase_flash"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/rlSnInfo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:orientation="horizontal">
          <Button
            android:id="@+id/btnReadSn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_read_sninfo"/>
        </LinearLayout>

        <LinearLayout
          android:id="@+id/rlUserInfo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:orientation="horizontal">
          <Button
            android:id="@+id/btnReadUserInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_read_info"/>
          <Button
            android:id="@+id/btnSetUserInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_set_info"/>
          <Button
            android:id="@+id/btnEraseUserInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_erase_info"/>
        </LinearLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="5dp"
          android:orientation="horizontal">
          <Button
            android:id="@+id/btnReadPatchVersion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_read_version"/>
          <Button
            android:id="@+id/btnReadDeviceInfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_read_device_info"/>
        </LinearLayout>
        <Button
          android:id="@+id/btnCheckPatchStatus"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:gravity="center"
          android:text="@string/str_check_patch_status"/>
        <Button
          android:id="@+id/btnOTA"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="5dp"
          android:gravity="center"
          android:text="@string/str_ota"/>

        <Button
          android:id="@+id/btnEngineerModule"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginTop="5dp"
          android:gravity="center"
          android:text="@string/open_engineer"/>
      </LinearLayout>

    </RelativeLayout>

    <Button
      android:id="@+id/btnDisconnect"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="@dimen/activity_horizontal_margin"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      android:background="@color/colorAccent"
      android:text="@string/disconnect"
      android:textColor="@color/white"/>

  </LinearLayout>
</ScrollView>